typescript/checker/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            89,
        ),
        hi: BytePos(
            100,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts:2:5
  |
2 | var condBoolean: boolean;
  |     ^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            135,
        ),
        hi: BytePos(
            147,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts:5:5
  |
5 | var exprBoolean1: boolean;
  |     ^^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            162,
        ),
        hi: BytePos(
            173,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts:6:5
  |
6 | var exprNumber1: number;
  |     ^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            187,
        ),
        hi: BytePos(
            198,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts:7:5
  |
7 | var exprString1: string;
  |     ^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            212,
        ),
        hi: BytePos(
            225,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts:8:5
  |
8 | var exprIsObject1: Object;
  |     ^^^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            259,
        ),
        hi: BytePos(
            271,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts:11:5
   |
11 | var exprBoolean2: boolean;
   |     ^^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            286,
        ),
        hi: BytePos(
            297,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts:12:5
   |
12 | var exprNumber2: number;
   |     ^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            311,
        ),
        hi: BytePos(
            322,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts:13:5
   |
13 | var exprString2: string;
   |     ^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            336,
        ),
        hi: BytePos(
            349,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts:14:5
   |
14 | var exprIsObject2: Object;
   |     ^^^^^^^^^^^^^

error: unimplemented
expand_export_info(Object)
File: $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts
  --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts:45:23
   |
45 | var resultIsObject1 = condBoolean ? exprIsObject1 : exprIsObject2;
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(Object)
File: $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts
  --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts:52:23
   |
52 | var resultIsObject2 = true ? exprIsObject1 : exprIsObject2;
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(Object)
File: $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts
  --> $DIR/tests/conformance/expressions/conditonalOperator/conditionalOperatorConditionIsBooleanType.ts:60:23
   |
60 | var resultIsObject3 = true || false ? exprIsObject1 : exprIsObject2;
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

